# ML04

./: Lesson2.ipynb  README.md  classDiagram.groovy  cnn-models-test-ipynb.ipynb  lesson3.ipynb
vehicle-tracking-system/: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
vehicle-tracking-system/app/: main.py
vehicle-tracking-system/app/analytics/: counting.py
vehicle-tracking-system/app/api/: routes_health.py  routes_reports.py  routes_tracks.py
vehicle-tracking-system/app/core/: config.py
vehicle-tracking-system/app/detection/: detector.py  yolo_detector.py
vehicle-tracking-system/app/domain/: schemas.py
vehicle-tracking-system/app/services/: inference_service.py
vehicle-tracking-system/app/storage/: db.py
vehicle-tracking-system/app/tracking/: bytetrack_tracker.py  tracker.py
vehicle-tracking-system/configs/: app.yaml  model.yaml  tracker.yaml  zones.yaml
vehicle-tracking-system/docs/: architecture.md
vehicle-tracking-system/scripts/: run_video_inference.py
vehicle-tracking-system/tests/e2e/: test_summary.py
vehicle-tracking-system/tests/integration/: test_demo_tracks.py
vehicle-tracking-system/tests/unit/: test_health.py
